k8s/envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  # Adding new entries here will make them appear as files in the deployment.
  # Please update k8s.io/k8s.io/README.md when you update this file
  envoy.yaml: |-
    admin:
      access_log_path: "/dev/stdout"
      address:
        socket_address: { protocol: TCP, address: 0.0.0.0, port_value: 9999 }
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15001
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
                      max_grpc_timeout: 0s
              access_log:
              - name: envoy.file_access_log
                config:
                  path: "/dev/stdout"

      clusters:
      - name: local_service
        http2_protocol_options: {}
        connect_timeout: 1s
        type: static
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 80
